# advenced-deep-learning-with-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: CODEOWNERS
1-image-classification/: 1-1-load-vgg.ipynb  1-3-transfer-learning.ipynb  1-3_5-transfer-learning-fine-tuning.ipynb
2-ssd/: 2-ssd.ipynb
3-semantic-segmentation/: 3-pspnet.ipynb
5-gan-image-generation/: 5-dcgan.ipynb  dcgan.ipynb  sagan.ipynb
