[tool.poetry]
name = "advanced-deep-learning-with-pytorch"
version = "0.1.0"
description = ""
authors = ["reirev <reirev2913@gmail.com>"]
readme = "README.md"

# [tool.poetry.dependencies]
# # python = "^3.10"
# # torch = "^2.1.1"
# # torchvision = "^0.16.1"
# # torchaudio = "^2.1.1"
# # ipykernel = "^6.27.1"
# # notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
